syntax = "proto3";

service ManagerService {
	rpc Crash(CrashRequest) returns (CrashResponse);
	rpc CommunicationDelay(CommunicationDelayRequest) returns (CommunicationDelayResponse);
	rpc StatusHookConfig(StatusHookConfigRequest) returns (StatusHookConfigResponse);
}

message CrashRequest {
}

message CrashResponse {
	bool ok = 1;
}

message CommunicationDelayRequest {
	int32 delayMsPerRequest = 1;
}

message CommunicationDelayResponse {
	bool ok = 1;
}

message StatusHookConfigRequest {
	bool enabled = 1;
	int32 hookIntervalMs = 2;
}

message StatusHookConfigResponse {
	bool ok = 1;
}
